--- a/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
@@ -34,137 +34,108 @@ $${\color{green}Các \space yếu \space tố \space ảnh \space hưởng \spac
 **3.Máy chủ ảo:**
 
 - DNS cho phép một địa chỉ IP duy nhất có thể liên kết với nhiều tên miền khác nhau. Ví dụ:
-  - IP `192.168.1.100` có thể kết nối 
-  - IP `192.168.1.100` could be linked to `www.example.com`, `helpdesk.example.com`, and `webmail.example.com.`
-- Each domain name can serve different content using virtual hosts, identified by the `Host` header in HTTP requests. If additional domain names are unknown, other web applications may go undetected.
+  - IP `192.168.1.100` có thể kết nối với `www.example.com`, `helpdesk.example.com`, `webmail.example.com.`
 
->**3.Máy Chủ Ảo (Virtual Hosts)**
->- DNS cho phép một địa chỉ IP có thể liên kết với nhiều tên biểu tượng khác nhau, ví dụ:
->    - IP `192.168.1.100` có thể liên kết với `www.example.com`, `helpdesk.example.com`, và `webmail.example.com.`
->- Mỗi tên miền có thể phục vụ nội dung khác nhau thông qua máy chủ ảo (virtual host), sử dụng thông tin trong tiêu đề `Host` của HTTP. Nếu không biết đến các tên miền khác, thì rất khó để phát hiện thêm các ứng dụng web khác ngoài trang chính.
 
-# APPROACHES TO ADDRESS ISUE #
+# CÁCH TIẾP CẬN #
 
-$${\color{green}Non-standard \space URLs}$$
+$${\color{green}URls \space không \space chuẩn}$$
 
-Identifying non-standard web applications (those with non-obvious URLs) can be challenging because there are no set rules or naming conventions that govern their existence. However, testers can use several strategies to gain insight into these hidden applications:
+- Việc phát hiện các trang web có URl không chuẩn rất phức tạp vì không có tiêu chuẩn gì về quy định cho cách đặt tên. Tuy nhiên, các kiểm thử viên có thể sử dụng các cách dưới đây để tiếp cận với các phần bị ẩn
+- 
+**1.Duyệt thư mục và cấu hình sai:**
 
-**1.Directory Browsing and Misconfiguration:**
-- If the web server is improperly configured to allow directory browsing, it can expose directories and files, making hidden applications easier to spot. Vulnerability scanners can also assist by detecting such misconfigurations.
+- Nếu máy chủ bị cấu hình sai, người kiểm thử có thể có thể nhìn thấy các tệp tin bị ẩn. Sử dụng các công cụ quét lỗ hổng cũng có thể phát hiện ra các lỗ hổng này
 
-**2.Search Engine Indexing:**
-- Hidden applications might be referenced on other web pages, and there’s a possibility they have been crawled and indexed by search engines. Testers can use search engine queries, such as `site:www.example.com`, to uncover URLs that point to these non-standard applications.
+**2.Chỉ mục của công cụ tìm kiếm:**
+- Có thể sử dụng `site:www.example.com` để phát hiện URL trỏ đến những  không chuẩn
 
-**3.Probing Likely URLs:**
-- Testers can guess URLs that could be likely candidates for hidden or non-published applications. For instance, URLs like `https://www.example.com/webmail`, `https://webmail.example.com/`, or `https://mail.example.com/` might reveal webmail interfaces. Similarly, administrative interfaces, like a Tomcat admin panel, might be accessible at obscure URLs not linked elsewhere. A combination of dictionary-based searching or “intelligent guessing” and vulnerability scanners can help in discovering these hidden applications.
-
->Việc phát hiện các ứng dụng web có URL không chuẩn (các URL không rõ ràng hoặc không được công khai) rất phức tạp vì không có tiêu chuẩn cố định nào quy định về cách đặt tên cho các ứng dụng này. Tuy nhiên, có một số phương pháp mà người kiểm thử có thể sử dụng để tìm ra các ứng dụng ẩn này:
->
->**1.Duyệt Thư Mục và Cấu Hình Sai:**
->- Nếu máy chủ web bị cấu hình sai và cho phép duyệt thư mục, người kiểm thử có thể nhìn thấy các ứng dụng hoặc tập tin không được bảo vệ. Việc này có thể giúp lộ ra các ứng dụng không được công khai. Sử dụng các công cụ quét lỗ hổng bảo mật (vulnerability scanners) cũng có thể phát hiện ra các cấu hình sai này, cho phép truy cập vào các ứng dụng ẩn.
->
->- **2.Chỉ Mục của Công Cụ Tìm Kiếm:**
->- Các ứng dụng ẩn có thể được tham chiếu trên các trang web khác, và có khả năng chúng đã bị các công cụ tìm kiếm quét và lập chỉ mục. Người kiểm thử có thể dùng các truy vấn đặc biệt, như `site:www.example.com`, để tìm các URL tiềm ẩn của ứng dụng trên một trang web cụ thể. Các URL trả về có thể bao gồm những ứng dụng không hiển thị rõ ràng.
->
->**3.URL Khả Dụng:**
->- Thử đoán các URL có thể dẫn tới các ứng dụng không được công khai. Ví dụ, một giao diện webmail có thể được truy cập từ các URL như `https://www.example.com/webmail`, `https://webmail.example.com/`, hoặc `https://mail.example.com/`. Các giao diện quản trị cũng có thể nằm ở các URL ẩn mà không được liên kết ở đâu khác. Việc thử tìm kiếm theo từ điển (dictionary-style searching) hoặc “đoán thông minh” (intelligent guessing) có thể mang lại kết quả. Các công cụ quét lỗ hổng cũng hữu ích trong việc dò tìm các ứng dụng này
+**3.Đoán URLs:**
+- Ví dụ, một webmail có thể được truy cập từ các URL như `https://www.example.com/webmail`, `https://webmail.example.com/`, hoặc `https://mail.example.com/`.
 
 $${\color{green}Non-standard \space Ports}$$
 
-When testing web applications, it's important to check for services running on non-standard ports. Unlike the typical web ports (80 for HTTP and 443 for HTTPS), applications might be running on any of the 64,000 available TCP ports. Here’s a step-by-step explanation of how to discover these applications:
+- Khi kiểm thử web, điều quan trọng là cần kiểm tra các web chạy trên cổng không chuẩn. Không như các cổng chuẩn khác ( 80 ch HTTP, 443 cho HTTPS ), các ứng dụng này có thể chạy trên bất cứ cổng nào trong 64000 cổng TCP khả dụng
 
-**1.Using Port Scanners**
+**1.Sử dụng trình quét cổng**
 
-nmap is a powerful tool for this purpose. It can scan all 64,000 TCP ports to identify which ones are open and what services are running on them. Here’s how you use it:
+- Sử dụng `nmap`
 
 ![image](https://github.com/user-attachments/assets/b1eda00e-fa2a-4033-90ac-a415cad8a70a)
-  - `-Pn`: Skips host discovery (assumes the host is up).
-  - `-sT`: Performs a TCP connect scan (checks which ports are open).
-  - `-sV`: Attempts to determine the version of the service running on each open port.
-  - `-p0-65535`: Scans all ports from 0 to 65535.
+  - `-Pn`: bỏ qua điều tra host ( giả định rằng host đang hoạt động).
+  - `-sT`: quét kết nối TCP ( kiểm tra các cổng đang mở )
+  - `-sV`: xác định phiên bản của dịch vụ đang chạy trên mỗi cổng
+  - `-p0-65535`: quét tất cả cổng từ 0 đến 65535
 
-**Output Interpretation**: The output will list open ports and the services running on them. For example:
+**Giải thích kết quả**: Kết quả sẽ liệt kê các cổng đang mở và các dịch vụ đang chạy trên chúng. Ví dụ:
 
 ![image](https://github.com/user-attachments/assets/515d2543-f6ab-41df-9c8b-bd9ca367244f)
 
-Key Findings:
-- Port 80: An Apache HTTP server is running.
-- Port 443: An HTTPS server is likely running (needs confirmation).
-- Port 901: A Samba SWAT web interface is present.
-- Port 1241: An SSL-wrapped Nessus daemon is present.
-- Port 3690: An unspecified service (could be identified later).
-- Port 8000: Likely an HTTP server (confirmed with a telnet test).
-- Port 8080: An Apache Tomcat server is running.
+- Port 80: một máy chủ Apacha HTTP đang chạy
+- Port 443: có khả năng một máy chủ HTTPS đang chạy
+- Port 901: xuất hiện giao diện web Samba SWAT
+- Port 1241: SSL-wrapped Nessus xuất hiện
+- Port 3690: 1 dịch vụ không xác định
+- Port 8000: có khả năng là một máy chủ 
+- Port 8080: một máy chủ Apache Tomcat đang chạy
 
 **2.Confirming Services**
 
-- For ports where the service is not immediately clear:
-  - Telnet: You can use `telnet` to connect and manually send HTTP requests to see if the service responds as an HTTP server.
-
+- Đối với các cổng mà dịch vụ chưa xác định:
+  - Sử dụng `telnet` để kết nối và gửi các yêu cầu HTTP để xem dịch vụ có phản hồi như một máy chủ HTTP không
 ![image](https://github.com/user-attachments/assets/aff32215-fcdd-4921-b86d-7cdcd6ca1c52)
 
-Then, send an HTTP GET request:
+Sau đó gửi một yêu cầu HTTP GET:
     
 ![image](https://github.com/user-attachments/assets/699e154e-3d94-4ee5-8d7b-fd2f7bc8a917)
 
-Response Example:
+Ví dụ về kết quả:
 
 ![image](https://github.com/user-attachments/assets/bee5095a-4499-44d2-836b-472256d6d5e0)
 
-This confirms that the service on port 8000 is an HTTP server.
+Điều này khẳng định rằng dịch vụ chạy trên cổng 8000 của máy chủ HTTPHTTP
 
-**3.Using Vulnerability Scanners**
+**3.Sử dụng công cụ quét lỗ hổng bảo mật**
 
-Vulnerability scanners like Nessus can also detect services running on non-standard ports. They can:
-- Identify HTTP[S] Services: Scan all ports to find web services.
-- Assess Vulnerabilities: Check for known vulnerabilities in these services.
-- Detect Popular Applications: Spot common applications or administrative interfaces that might not be obvious.
+- Sử dụng các công cụ quét lỗ hổng bảo mật như Nessus có thể phát hiện các dịch vụ đang chạy trên các cổng không chuẩn. Chúng có thể
+  - Xác định dịch vụ HTTP(S): quét tất cả các cổng để xác định dịch vụ web
+  - Đánh giá lỗ hổng bảo mật: Kiểm tra các lỗ hổng đã biết trong các dịch vụ này
+  - Phát hiện các ứng dụng phổ biến hoặc giao diện quản trị không rõ ràng
 
-Example: Nessus, when configured to scan all ports, will identify web servers and their vulnerabilities, including SSL/TLS configurations and common application interfaces.
+=> Nessus khi được cấu hình để quét tất cả các cổng sẽ xác định được các máy chủ web và lỗ hổng của chúng, bao gồm cấu hình SSL/TLS 
 
-$${\color{green}Virtual \space Hosts}$$
+$${\color{green}Máy \space chủ \space ảo}$$
 
-**1.DNS Zone Transfers**
+**1.Chuyển vùng DNS**
 
-Identifying virtual hosts associated with a particular IP address can be a complex task, especially when multiple DNS names (or symbolic names) map to the same IP address. Virtual hosts allow one IP address to host multiple web applications or services, each with its unique DNS name. Here’s a breakdown of how DNS zone transfers can help identify these virtual hosts, though this method has its limitations.
+- Việc xác định các máy chủ ả liên kết với một địa chỉ IP cụ thể có thể là một nhiệm vụ phức tạp, đặc biệt là khi nhiều tên DNS ánh xạ tới cùng 1 địa chỉ IP
 
->Việc xác định các virtual hosts liên kết với một địa chỉ IP cụ thể là một nhiệm vụ phức tạp, đặc biệt khi nhiều tên DNS (hay tên biểu tượng) ánh xạ tới cùng một địa chỉ IP. Virtual hosts cho phép một địa chỉ IP lưu trữ nhiều ứng dụng web hoặc dịch vụ, mỗi ứng dụng có tên DNS riêng biệt. Dưới đây là cách DNS zone transfers có thể giúp xác định các virtual hosts này, mặc dù phương pháp này có một số hạn chế.
+**a. Định nghĩa**
 
-**a. What is DNS Zone Transfer?**
+-  DNS zone transfer là việc sao chép các bản ghi DNS giữa các máy chủ chính và phụ. Sau đó, 1 zone transfer sẽ cung cấp tất cả bản ghi DNS trong miền ( full zone transfer ) hoặc những bản ghi từ lần cập nhập mới nhất ( partial zone transfer )
 
-- A DNS zone transfer is a mechanism used by DNS servers to replicate DNS records between primary and secondary servers. If successful, a zone transfer will provide a list of all DNS records in the domain, revealing all the associated DNS names, including potential virtual hosts.
-- However, DNS zone transfers are typically restricted for security reasons because they can expose sensitive information about the network. Most DNS servers are configured to refuse unauthorized zone transfers.
+  ![image](https://github.com/user-attachments/assets/952693d8-a099-44d6-971c-00740635c11e)
 
->DNS zone transfer là một cơ chế được sử dụng bởi các máy chủ DNS để sao chép các bản ghi DNS giữa các máy chủ chính và phụ. Nếu thành công, một zone transfer sẽ cung cấp danh sách tất cả các bản ghi DNS trong miền, tiết lộ tất cả các tên DNS liên quan, bao gồm cả các virtual hosts tiềm ẩn.
->
->Tuy nhiên, DNS zone transfer thường bị hạn chế vì lý do bảo mật, do nó có thể tiết lộ thông tin nhạy cảm về mạng. Phần lớn các máy chủ DNS được cấu hình để từ chối các zone transfer không được ủy quyền.
+**b.Cách thực hiện DNS Zone Transfers**
 
-**b.How to Perform DNS Zone Transfers**
-
-- Identify the Name Servers:
-  - First, you need to identify which DNS servers are authoritative for the domain associated with your target IP address (`x.y.z.t`).
+- Xác định tên máy chủ:
+  - Đầu tiên cần xác định máy chủ DNS nào có quyền quản trị với tên miền được liên kết với địa chỉ IP của mục tiêu 
     Example:
     
     ![image](https://github.com/user-attachments/assets/e5046584-aeee-49db-b89f-53a65971f6a4)
     
->Hai name servers này thuộc về Cloudflare, một dịch vụ bảo mật và tăng tốc website phổ biến. Khi owasp.org sử dụng Cloudflare, tất cả các yêu cầu DNS cho tên miền này sẽ được chuyển qua các name servers của Cloudflare để xử lý.
->Cloudflare sẽ trả về các bản ghi cần thiết (như A record, CNAME, MX) cho tên miền `owasp.org`, giúp trình duyệt hoặc ứng dụng biết cách kết nối đến đúng máy chủ web của OWASP.
+  - Hai name servers này thuộc về Cloudflare, một dịch vụ bảo mật và tăng tốc website phổ biến. Khi owasp.org sử dụng Cloudflare, tất cả các yêu cầu DNS cho tên miền này sẽ được chuyển qua các name servers của Cloudflare để xử lý.
+  - Cloudflare sẽ trả về các bản ghi cần thiết (như A record, CNAME, MX) cho tên miền `owasp.org`, giúp trình duyệt hoặc ứng dụng biết cách kết nối đến đúng máy chủ web của OWASP.
 
-**c.Attempt a Zone Transfer**
-- Once you have the name servers, you can attempt a zone transfer using the `host` or `dig` command.
-- The goal is to ask the DNS server to transfer the list of all DNS entries it knows about. This can reveal other hidden DNS names like `helpdesk.example.com` or `webmail.example.com` that are associated with the target.\
-  Example:
+- Sau khi có tên các máy chủ, có thể thực hiện zone transfer bằng cách sử dụng câu lệnh `host` hoặc `dig`
+- Mục tiêu là yêu cầu máy chủ DNS chuyển giao toàn bộ danh sách DNS mà nó biết. Từ đó có thể biết được các tên DNS ẩn, ví dụ như `helpdesk.example.com` hoặc `webmail.example.com`
+  Ví dụ:
 
   ![image](https://github.com/user-attachments/assets/877f8ccf-73e3-4b46-8931-915a1313479c)
 
-However, in most cases, the response will be a refusal, as zone transfers are commonly restricted to prevent unauthorized access.
+- Tuy nhiên, trong hầu hết trườn hợp, phản hồi sẽ bị từ chối vì zone transfer thường bị hạn chế để tránh truy cập trái phép
 
-**d.Why Zone Transfers Often Fail**
-
-- Security Measures: Modern DNS servers usually reject unauthorized zone transfer requests. The message 5(REFUSED) indicates that the server refused the transfer.
-- Limited Usage: Zone transfers are primarily meant for internal DNS server synchronization, not for external use, which is why many servers have this feature restricted.
-
-**2.DNS Inverse Queries**
+**2.Truy vấn ngược DNS**
 
 **a.PTR Records (Pointer Records)**
 
