--- a/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
@@ -137,64 +137,26 @@ $${\color{green}Máy \space chủ \space ảo}$$
 
 **2.Truy vấn ngược DNS**
 
-**a.PTR Records (Pointer Records)**
+- **PTR Records (Pointer Records)**
 
-A PTR record is a type of DNS record used to map an IP address to a domain name, opposite to the A record, which maps a domain name to an IP address. This record is commonly used in Reverse DNS Lookup.
+- PTR hay còn gọi là Reverse DNS được sử dụng để trỏ từ địa chỉ IP đến tên miền 
 
->PTR record là một loại bản ghi trong DNS được sử dụng để ánh xạ một địa chỉ IP sang một tên miền (ngược lại với A record, ánh xạ tên miền sang IP). Bản ghi này thường được sử dụng trong Reverse DNS Lookup.
+![image](https://github.com/user-attachments/assets/b9b99318-f3ad-45ae-b42f-cabb32e1f67d)
 
-**b.Process of Inverse Query:**
+- Đầu tiên người kiểm thử sẽ thiết lập truy vấn PTR rồi truy vấn vào địa chỉ IP mục tiêu. Nếu may mắn, họ sẽ có thể có được tên miền liên kết với địa chỉ. Tuy nhiên, kỹ thuật này không được khuyến khích vì còn phụ thuộc vào bản dồ tên IP
 
-- Instead of asking the DNS server which IP corresponds to a domain name, you use a query command to request a PTR record from a specific IP address.
-- For example, if you have an IP address like `192.168.1.100`, you can use tools such as `dig` or `host` to find the corresponding PTR record.
+**3.Tìm kiếm DNS dựa trên web**
 
->Thay vì hỏi DNS server xem tên miền nào tương ứng với một địa chỉ IP, bạn sử dụng lệnh truy vấn để yêu cầu một PTR record từ địa chỉ IP cụ thể.
->Ví dụ, nếu bạn có IP 192.168.1.100, bạn có thể sử dụng công cụ như dig hoặc host để tìm PTR record tương ứng.
+- Phương pháp này tương tự như DNS zone transfer nhưng phụ thuộc vào các dịch vụ trên web cho phép tìm kiếm tên theo tên DNS. Người kiểm thử có thể truy vấn để lấy danh sách các tên miền thuộc về 1 tên miền chính
+-  Ví dụ dưới đây sử dụng [ Netcraft Search DNS ](https://searchdns.netcraft.com/?restriction=site+contains&host=owasp.org&position=limited) với tên miền `owasp.org`
 
-**c.How to Perform Inverse DNS Queries:**
+  ![image](https://github.com/user-attachments/assets/e6f943ef-b496-4362-a927-d5abca9b12a8)
 
-- Using the `dig` command:
->dig -x 192.168.1.100
-- Using the `host` command
->host 192.168.1.100
-- If successful, the command will return the domain name corresponding to that IP address. For example:
->100.1.168.192.in-addr.arpa domain name pointer example.com.
+**4.Dịch vụ chuyển đổi ngược IP**
 
-**d.Conditions for Successful Inverse DNS Query:**
+- Dịch vụ này có thể giúp tìm ra các tên miền khác nhau có chung 1 IP
 
-- This technique works only if a PTR record has been set up on the DNS server. However, not all IP addresses have PTR records, and not all organizations configure them.
-- Even if PTR records exist, they may not accurately or fully reflect all associated domain names, especially in environments where multiple domains share the same IP address.
+**5.Tra Google**
 
-**3.Web-based DNS Searches**
-
-Web-based DNS searches are a method similar to DNS zone transfers but are conducted through web-based services that allow for name-based searches within the DNS. These searches are useful for gathering information about domain names associated with a particular domain, especially when traditional DNS queries or zone transfers are not possible.
-
-**a. Concept:**
-
-- Web-based DNS searches involve using online tools and services that provide information about domain names linked to a specific domain
-- These services often gather data from public sources, including web crawlers and other forms of DNS data, which can include subdomains and associated DNS records.
-
-**b.[Netcraft Search DNS Service](https://searchdns.netcraft.com/?host)**
-
-- One of the popular web-based DNS search tools is the Netcraft Search DNS service.
-- How it works: Testers can enter a domain name (e.g., example.com) into the search tool. The service then retrieves and displays a list of subdomains or related DNS names associated with the domain.
-- This list may include common subdomains like www.example.com, mail.example.com, or less obvious ones such as admin.example.com, which might not be easily discovered through basic DNS queries.
-- For example:
-  
-![image](https://github.com/user-attachments/assets/4cfe6753-338f-47c5-9680-bcf399e3abe4)
-
-**c. Usage in Security Testing**
-
-- Purpose: Identifying all potential entry points, such as hidden subdomains, for security assessments or penetration tests.
-- Validation: After obtaining the list of DNS names, testers must verify which names are relevant and valid for the target they are assessing. Not all results might be directly applicable or within scope, so careful filtering and analysis are necessary.
-
-**4.Reverse-IP Services**
-
-Reverse-IP services help you find different domain names that share the same IP address. This is useful for discovering other websites or services hosted on the same server as the site you're examining.
-
-**5.Googling**
-
-- Googling can help refine and expand your web application discovery by leveraging search engines to find additional information about domains and URLs that you’ve already identified.
-- For domains like webgoat.org, webscarab.com, and webscarab.net, perform searches like:
-  - site:webgoat.org to find all pages indexed by Google under this domain.
-  - webscarab.com to see general search results related to this domain.
+- Sau khi thu thập thông tin từ các kĩ thuật trên, người kiểm thử có thể kiếm chứng lại bằng cách công cụ tìm kiếm
+- Ví dụ như sử dụng `site:` để tìm tất cả các trang có chứa tên miền cần tìm
