--- a/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
@@ -62,7 +62,10 @@ $${\color{green}Non-standard \space Ports}$$
 - Sử dụng `nmap`
 
 ![image](https://github.com/user-attachments/assets/b1eda00e-fa2a-4033-90ac-a415cad8a70a)
-  - `-Pn`: bỏ qua điều tra host ( giả định rằng host đang hoạt động).
+  - `-Pn`: giúp bỏ qua bước kết nối và quét thằng các cổng
+
+  > Một số máy chủ sẽ phản hồi ping khi chúng hoạt động, nếu không phản hồi, máy có thể sẽ nghĩ cho rằng chúng ngừng hoạt động. Mặt khác, nhiều máy chủ được cấu hình không phản hồi ping => Sư dụng -Pn để bỏ qua bước ping
+
   - `-sT`: quét kết nối TCP ( kiểm tra các cổng đang mở )
   - `-sV`: xác định phiên bản của dịch vụ đang chạy trên mỗi cổng
   - `-p0-65535`: quét tất cả cổng từ 0 đến 65535
