--- a/Web_testing/0.1.Information_Gathering/4.1.6.Identify_Application_Entry_Points.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.6.Identify_Application_Entry_Points.md
@@ -1,130 +1,65 @@
-# OVERALL #
+# TỔNG QUAN #
 
-$${\color{green}Summary}$$
+$${\color{green}Mục \space tiêu \space kiểm \space }$$
 
-- Application entry points are the starting points or URLs through which users interact with a web application. Finding these entry points is crucial for security testing, as they allow you to explore and analyze different parts of the application. Here are some methods to identify these entry points
-
-$${\color{green}Test \space Objectives}$$
-
-- Identify Possible Entry Points + Identify Injection Points
+- Xác định điểm xâm nhập và điểm tiêm nhiễm có thể xảy ra thông qua phân tích yêu cầu và phản hồi
 
 # HOW TO TEST #
 
-**1. Understand Application Interaction**
+**1. Giao tiếp ứng dụng**
+
+- Xác định các yêu cầu HTTP: bao gồm các yêu caafu GET, POST và bất kỳ tham số, biểu mẫu được gửi tới ứng dụng 
 
 - Analyze HTTP Requests: While navigating through the application, pay attention to all HTTP requests, including GET and POST requests, as well as any parameters and form fields sent to the application.
-- Focus on Request Methods:
-  - `GET`: Typically used to retrieve data from the application. Parameters are usually in the URL (after the ?).
-  - `POST`: Typically used to send data to the application. Parameters are included in the body of the request.
     
-**2. Use Supporting Tools**
-    
-- Proxy Interceptors: Use tools like Burp Suite or OWASP ZAP to intercept and monitor requests and responses between you and the application. This helps in viewing the full content of requests and responses, including hidden parameters that might not be visible otherwise.
-- Spreadsheets: Record all important information such as the requested page (including proxy request numbers for future reference), interesting parameters, request type (GET, POST, etc.), whether access is authenticated or not, whether TLS is used, and any other relevant notes.
-  
-**3. Check the Requests**
-
-- Identify GET and POST Usage:
-  - GET: Identify parameters in the URL (query string).
-  - POST: Identify all parameters in the request body, including hidden parameters.
-- Hidden Parameters: In POST requests, hidden form fields often contain sensitive information and can affect the application's response if altered.
-- Query String Parameters: In GET requests, check for parameters in the query string, especially when multiple parameters are separated by & or other special characters.
-- Custom Headers: Pay attention to any custom or additional headers (e.g., debug: false) that may provide extra information about the application's configuration.
-
-**4. Check the Responses**
-- Cookies: Identify where new cookies are set (via Set-Cookie headers), modified, or deleted.
-- Redirects: Look for any redirects (HTTP status code 3xx) and error status codes like 400 (Bad Request), 403 (Forbidden), or 500 (Internal Server Error).
-- Interesting Headers: Note any interesting HTTP headers that could provide insights into server configuration or how the application handles requests.
+**2. Kiểm tra phản hồi**
+- Cookies: Xác định vị trí mà cookie mới được thiết lập, thay đổi hoặc bị xóa 
+- Chuyển hướng: tìm các chuyển hướng (3xx), mã lỗi: 400( yêu cầu không hợp lệ ), 403 (cấm truy cập ), 500 ( lỗi máy chủ nội bộ ) 
+- Header cần chú ý: Ghi lại những HTTP Header có thể cung cấp thông tin về cấu hình máy chủ hoặc cách ứng dụng xử lý yêu cầu
+>HTTP Header là các yêu cầu, phản hồi HTTP giữa máy khách và máy chủ khi truy cập vào 1 trang 
 
 # BLACK BOX TESTING #
 
-$${\color{green}Overview}$$
-
-Black-box testing involves evaluating the functionality of an application without knowledge of its internal code or logic. The focus is on testing the application based on its inputs and outputs. When testing for application entry points, you are identifying points where inputs are accepted by the application, which could potentially be exploited.
-
->Kiểm thử hộp đen liên quan đến việc đánh giá chức năng của một ứng dụng mà không cần biết mã nguồn hoặc logic nội bộ của nó. Mục tiêu là kiểm tra ứng dụng dựa trên các đầu vào và đầu ra. Khi kiểm tra các điểm vào của ứng dụng, bạn đang xác định các điểm mà ứng dụng chấp nhận đầu vào, những điểm này có thể bị khai thác.
-
-$${\color{green}Step \space for \space Testing}$$
-
-**1.Identify Parameters**: Note all parameters in both GET and POST requests
-**2.Analyze Request and Response**:  Check how the parameters affect the application. For instance, changing a parameter might result in different application behavior.
-**3.Custom Headers**: Pay attention to custom headers and cookies, as they may influence application behavior or contain sensitive data.
-
-$${\color{green}Example \space 1: \space GET \space Request \space for \space Purchasing \space an \space Item}$$
+$${\color{green}Ví \space dụ \space 1: \space yêu \space cầu \space GET}$$
 
 ![image](https://github.com/user-attachments/assets/04344322-237c-4bd9-b49e-eb4003878f6d)
 
-- Parameters to Note:
+- Các tham số cần lưu ý:
   - CUSTOMERID=100
   - ITEM=z101a
   - PRICE=62.50
   - IP=x.x.x.x
-  - Cookie: Encoded parameter or used for session state
+  - Cookie: tham số đã được mã hóa
 
-$${\color{green}Example \space 2: \space POST \space Request \space for \space Logging \space In}$$
+$${\color{green}Ví \space dụ \space 1: \space yêu \space cầu \space POST}$$
 
 ![image](https://github.com/user-attachments/assets/67dabd78-2d8b-4309-8b91-e537d653564b)
 
-- Parameters to Note:
+- Các tham số cần lưu ý:
   - user=admin
   - pass=pass123
   - debug=true
   - fromtrustIP=true
-  - Custom HTTP Header: CustomCookie
-
-$${\color{green}Key \space Points \space to \space Observe}$$
-
-**1.Parameters in GET Requests:**
-
-- Parameters are included in the URL query string.
-  - Example: CUSTOMERID, ITEM, PRICE, IP.
-  - 
-**2.Parameters in POST Requests:**
-
-- Parameters are included in the body of the request.
-  - Example: user, pass, debug, fromtrustIP.
-  - Custom HTTP Headers: Observe any custom headers like CustomCookie.
-  - 
-**3.Cookies:**
-
-- Cookies might carry session information or encoded parameters.
-- Example: SESSIONID.
+  - Custom HTTP Header: `00my00trusted00ip00is00x.x.x.x00` => tham số này chứa thông tin về địa chỉ IP
 
 # GRAY-BOX TESTING #
 
-$${\color{green}Overview}$$
+$${\color{green}Các \space bước \space kiểm \space thử \space hộp \space xám}$$
 
-Gray-box testing is a methodology that combines aspects of both black-box and white-box testing. It allows testers to evaluate the application from an external user perspective (as in black-box testing) while also leveraging some knowledge of the internal structure or operations of the application, which may be obtained from documentation or meetings with developers.
+**1.Áp dụng các bước như kiểm thử hộp đen:**
 
->Kiểm thử hộp xám là phương pháp kết hợp giữa kiểm thử hộp đen và kiểm thử hộp trắng. Nó cho phép kiểm tra ứng dụng từ góc độ của người dùng bên ngoài (như trong kiểm thử hộp đen), nhưng cũng sử dụng thông tin về cấu trúc hoặc hoạt động nội bộ của ứng dụng mà có thể thu thập được từ tài liệu hoặc từ các cuộc họp với các nhà phát triển.
+**2.Điều tra các nguồn dữ liệu bên ngoài:**
 
-$${\color{green}Steps \space \space for \space Testing \space Application \space Entry \space Points \space in\space Gray-Box \space Testing}$$
+- Các nguồn dữ liệu bên ngoài: xác định các loại dữ liệu ngoài mà ứng dụng nhận vào ( giao thức SNMP, tin nhắn syslog, SMTP từ các máy chủ khác )
+- Mở cuộc họp với nhà phát triển để xác định các chức năng nào sẽ đưa vào
 
-**1.Apply Black-Box Testing Techniques:**
-
-- Perform the steps similar to black-box testing: identify and document application entry points through HTTP request analysis, parameters, and headers.
-
-**2.Investigate External Data Sources:**
-
-- External Sources: Determine if the application receives data from external sources such as SNMP traps, syslog messages, SMTP, or SOAP messages from other servers.
-- Developer Meetings: Arrange meetings with developers to understand which functions accept or expect user input and how these inputs are formatted.
-
-**3.Specific Example:**
-
-- SOAP Requests: If the application accepts SOAP requests, developers could help you understand how to formulate a valid SOAP request that the application will accept and where the web service is located (if the web service or any other function hasn't already been identified during black-box testing).
-  
->Simple Object Access Protocol (SOAP) là một giao thức mạng để trao đổi dữ liệu có cấu trúc giữa các nút. Giao thức này sử dụng định dạng XML để truyền tải thông điệp. Giao thức này hoạt động trên các giao thức lớp ứng dụng như HTTP và SMTP để ghi chú và truyền tải. SOAP cho phép các quy trình giao tiếp trên khắp các nền tảng, ngôn ngữ và hệ điều hành, vì các giao thức như HTTP đã được cài đặt trên tất cả các nền tảng
+>SNMP (Simple Network Management Protocol)  1 giao thức quản lý .SNMP hoạt động bằng cách gửi các yêu cầu và nhận các phản hồi từ các thiết bị mạng, cho phép các quản trị viên mạng thu thập thông tin về trạng thái và hoạt động của các thiết bị cũng như thực hiện các thao tác quản lý như khởi động lại thiết bị, cấu hình các thông số mạng và nhiều hơn nữa.
+> Syslog ( System Logging Protocol ) là 1 giao thức dùng để gửi nhật lý hệ thống hoặc thông báo sựu kiện đến 1 máy chủ cụ thể
+> SMTP (Simple Mail Transfer Protocol) là 1 giao thức truyền gửi và nhận thư điện tử cho các tổ chức và cá nhân
 
 # OWASP Attack Surface Detector (ASD) #
 
-$${\color{green}Overview}$$
-
-- OWASP Attack Surface Detector (ASD) is a tool that analyzes the source code of a web application to identify endpoints, the parameters they accept, and the data types of those parameters. It can also compare the changes in the attack surface between two versions of an application.
+$${\color{green}Tóm \space tắt}$$
   
->OWASP Attack Surface Detector (ASD) là công cụ giúp phân tích mã nguồn web để tìm các điểm đầu cuối (endpoints), thông số mà chúng chấp nhận, và kiểu dữ liệu của chúng. Công cụ này còn có thể so sánh sự thay đổi bề mặt tấn công giữa hai phiên bản của ứng dụng.
+- OWASP Attack Surface Detector (ASD) là công cụ giúp phân tích mã nguồn web để tìm các điểm đầu cuối (endpoints), thông số mà chúng chấp nhận, và kiểu dữ liệu của chúng. Công cụ này còn có thể so sánh sự thay đổi bề mặt tấn công giữa hai phiên bản của ứng dụng.
 
-$${\color{green}Key \space Features:}$$
-
-- Detects endpoints, including unlinked ones that a spider cannot find.
-- Identifies parameters and their data types.
-- Compares attack surface changes between application versions.
