--- a/Web_testing/0.1.Information_Gathering/4.1.8.Fingerprint_Web_Application_Framework.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.8.Fingerprint_Web_Application_Framework.md
@@ -1,87 +1,90 @@
-# OVERVIEW #
+# TỔNG QUAN #
 
-$${\color{green} Objective}$$
+$${\color{green} Mục \space tiêu}$$
 
-- Identify Components: Detect which web frameworks or open-source software are used in the web application by analyzing markers like HTML headers, cookies, and directory structures.
-- Use Markers: Look for specific indicators that reveal the framework or application, such as default paths or version information.
-- Reduce Effort: Leverage identification to streamline the security testing process and focus on relevant vulnerabilities associated with the identified components.
+- Xác định các thành phần, phát hiện các web hoặc mã nguồn mở được sử dụng trong ứng dụng bằng cách phân tích HTML headers, cookie và cấu trúc thư mục
+- Sử dụng các chỉ báo: tìm các thông tin về framework hoặc ứng dụng, ví dụ như các đường dẫn mặc định hoặc thông tin phiên 
 
 # Black-Box Testing #
 
--  Several common locations to consider in order to identify frameworks or components:
+-  Một vài vị trí phổ biến cần xem xét kĩ
   - HTTP headers
   - Cookies
   - HTML source code
-  - Specific files and folders
+  - Các tệp tin hoặc thư mục
   - File extensions
-  - Error messages
+  - Thông báo lỗi
 
 # HTTP Headers #
 
-- The `X-Powered-By` header can reveal the web framework or technology in use -> but may not always be present as it can be disabled or obfuscated.
-- Other headers, such as X-Generator, can also give clues about the framework. For instance, `X-Generato`: Swiftlet might indicate the use of Swiftlet, while `X-Powered-By` might show PHP version.
+- Phần `X-Powered-By` hoặc `X-Generator` có thể tiết lộ framework hoặc công nghê được sử dụng .
+
+![image](https://github.com/user-attachments/assets/6f912548-c1a6-43e4-8880-643966df8dcc)
+
+- Nhưng phần này không phải lúc nào cũng có thể thấy được vì nó có thể bị ẩn đi hoặc thay đổi
+
+![image](https://github.com/user-attachments/assets/0f10f172-b2e7-4326-9805-e17e0ab96661)
 
 # Cookies #
 
--  Framework-specific cookies can help determine the web framework in use. For example, the presence of a cookie named CAKEPHP suggests that the `CakePHP` framework is being used.
-  
->Framework CakePHP là gì? Đó là một Framework PHP được xây dựng dựa theo mô hình MVC (Model-View- Controller) có mã nguồn mở, phát triển các ứng dụng, phần mềm web
+- 1 cách để xách định framework hiện tại là sử dụng các cookie đặc trưng của framework là xem HTTP request:
 
-- Frameworks allow customization of cookie names, which can be changed in the configuration files. For instance, in CakePHP, the cookie name can be set as follows:
+![image](https://github.com/user-attachments/assets/a0da053e-dac4-4986-8187-82c749e815a4)
 
-![image](https://github.com/user-attachments/assets/5e1813fb-0ebd-443d-8bca-f4d4f7bc7362)
+- Nhưng cần lưu ý rằng các tên cookie vẫn có thể được 
+
+![image](https://github.com/user-attachments/assets/677dd0e6-5173-485f-b49d-b6ebc7b80605)
 
 # HTML Source Code #
 
-- Search for HTML comments, framework-specific paths, and script variables that can reveal the framework or its version.
-- Information is often found in the <head> section or at the bottom of the HTML page.
--  Analyze the full HTML response to uncover all potential indicators of the web framework.
+- Xem các bình luận HTML, các đường dẫn cụ thể của framwork và các giá trị có thể tiết lộ thông tin về framework hoặc phiên bản của chúng
+
+![image](https://github.com/user-attachments/assets/4b8d7eb3-3d44-4931-936d-11f28804a4c9)
+
+- Thông tin thường được tìm thấy ở phần `<head>` hoặc ở cuối trang HTML
+- Phân tích toàn bộ phản hồi HTML 
 
 # Specific Files and Folders #
 
-1. Understanding File and Folder Structures:
+- Mỗi web đều có cấu trúc tệp và thư mục riêng trên máy chủ. Các đường dẫn cụ thể có thể được thấy ở nguồn HTML bằng kĩ thuật "disburting"
 
-- Unique Paths: Different web components have unique file and folder structures. Identifying these can help pinpoint the application or component used.
-- Example Paths: Specific directories like /wp-includes/, /wp-admin/, and /wp-content/ for WordPress.
+2. Kĩ thuật Dirbusting:
 
-2. Dirbusting Technique:
+- Disbursting hay còn gọi là brute-forcing thư mục, bao gồm việc sử dụng các thư mục và danh sách tệp đã biết để thăm dò và phân tíh phản hồi HTTP
+- Ví dụ về 1 cuộc tấn cong vào WordPress bằng cách sử dụng BurpSuite để tìm ra các đường dẫn và 
 
-- Definition: Dirbusting, or directory brute-forcing, involves using known folder and filename lists to probe a target server and analyze HTTP responses to discover server content.
-- Example: A successful dirbusting attack against a WordPress site using Burp Suite might reveal paths and files indicating the presence of WordPress.
-- Results: HTTP responses like 403 (Forbidden), 302 (Redirect), and 200 (OK) can confirm the existence of specific directories or components.
+![image](https://github.com/user-attachments/assets/f9034de1-f400-444f-8d2c-3b2053621ea0)
 
-2. Additional Tips:
+2. Các cách khác:
 
-- Check robots.txt: Before starting dirbusting, review the robots.txt file for information about sensitive directories that might be listed there.
-- Example File: Sensitive or application-specific directories might be exposed in robots.txt, which can provide additional clues.
+- Kiểm tra file `robots.txt`
 
-3. Utilize Existing Resources:
+![image](https://github.com/user-attachments/assets/dfd3b078-acec-42cc-a9fd-2ac20d968a4a)
 
-- FuzzDB Wordlists: Use pre-defined lists like FuzzDB for predictable files and folders during dirbusting to enhance your search.
+- Kiểm tra fle CHANGELOG
+
+![image](https://github.com/user-attachments/assets/9d0e937e-d53a-4482-966a-bf65f5769966)
+
+- Sử dụng [ FuzzDB wordlists of predictable files/folders.](https://github.com/fuzzdb-project/fuzzdb) để kiểm tra xem ứng dụng có lỗi hoặc rò rỉ thông tin hay không
 
 # File Extensions #
 
-1. File Extensions and Their Associations:
+**1.Các tệp phổ biến:**
 
-- `.php`– Indicates the use of PHP, a popular server-side scripting language.
-- `.aspx` – Associated with Microsoft ASP.NET, a framework for building web applications.
-- `.jsp` – Signifies the use of Java Server Pages (JSP), a technology for creating dynamic web content in Java.
+- `.php`– PHP
+- `.aspx` – Microsoft ASP.NET
+- `.jsp` – Java Server Pages (JSP)
 
-2. Example:
+**2. Ví dụ:**
 
 ![image](https://github.com/user-attachments/assets/7dded92b-8933-4bdc-bd2c-c99668545249)
 
--> OWASP wiki uses PHP due to the .php extension in its URLs.
+-> OWASP wiki sử dụng PHP vì có .php trongtrong URLs.
 
-# Error Messages #
+# Thông báo lỗi  #
 
-1. Error Messages Provide Clues:
-
-- File System Paths: Error messages can reveal specific paths like wp-content, indicating the use of WordPress.
-- Technology Indicators: Messages showing files such as functions.php suggest the use of PHP.
-
-2. Example:
-
+- Các thông báo lỗi có thể tiết lộ các đường dẫn cụ thể như `wp-content` cho thấy việc sử dụng WordPress
+- Như ví dụ dưới đây có hiển thị tệp `functions.php` cho thấy có sử dụng 
 ![image](https://github.com/user-attachments/assets/74e87259-4e9f-4026-9b17-2a1955f75a7c)
 
 # Common Identifiers #
@@ -120,7 +123,3 @@ Specific Markers
 |Business Catalyst| `<!-- BC_OBNW -->` | 
 |Indexhibit |`ndxz-studio` | 
 
-# Tools #
-
-- [WhatWeb](https://github.com/urbanadventurer/WhatWeb)
-- [Wappalyzer](https://www.wappalyzer.com/)
